# detof

./: .gitignore  CMakeLists.txt  Makefile  README.md
dataFormat/: raw.h
src/: detof.cxx
src/dataFormat/: raw.h
